--- a/smart_classroom/src/App.css
+++ b/smart_classroom/src/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
+*{
+  margin: 0px; padding: 0px; box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul>li{
+list-style: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* admin dashboard menu  */
+.admin_menubar{
+  min-height: 100%;
+  background-color: blueviolet;
   color: white;
+  /* position: absolute; */
+  left:-190px;
+  /* width: 100%; */
 }
 
-.App-link {
-  color: #61dafb;
+.menu_list>li{
+  text-align: center;
+   border: 1px solid;
+   padding: 5px;
+   background-color: aliceblue;
+   color:blueviolet; font-weight: bolder;
+   cursor: pointer;
+
+}
+.menu_list{
+  height: 100vh; width: 200px; display: flex; flex-direction: column; justify-content: space-around; height: 100vh; flex-wrap:nowrap; overflow-x: auto;
+  text-decoration: none;
+}
+nav{
+z-index: 1;
+}
+@media screen and (max-width:600px){
+  .admin_menubar{
+      /* display: none; */
+  }   
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+/* css of LandingPage  */
+
+/* section 1 css  */
+.section1-bg{
+background-image: url(https://oercommons.s3.amazonaws.com/media/courseware/lesson/image/ClassCalc-loop-720p_P46pT13.gif);
+background-size: 100% 100%;
+height: 90vh;
+}
+@media screen and (max-width:600px) {
+.section1-bg{
+  height: 50vh;
+}
+
+.section1-bg>div{
+  color: rgb(255, 255, 255);
+  background-color: rgba(0, 0, 0, 0.315);
+}
+.section1-bg>div>h2{
+  font-size:2.5rem; padding: 2px;
+  color: rgba(255, 0, 85, 0.918);background-color: rgba(255, 255, 255, 0.9); border-radius: 10px;
+  font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.section1-bg>div>p{
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.2rem;
+  word-spacing: 7px;
+}
+}
+
+.section1-bg>div>h2{
+font-size:4rem; color: rgb(253, 26, 101);
+font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.section1-bg>div>p{
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: larger;
+font-weight: 600;
+word-spacing: 7px;
+}
+
+.sec1-left-landingpg{
+display: flex; flex-direction: column; justify-content: center;
+border: 1px solid;
+}
+
+
+/* section 2 css of landing page  */
+
+.lp-section2>div>img{
+width: 300px; height: 250px;
+
+}
+
+/* section 3  */
+.lp-section3-img{
+display: flex; flex-direction: column; justify-content: center; align-items: center;
+}
+.lp-section3>div>img{
+height: 70%;
+width: 100%;
+}
+
+
+/* why choose us section of landing page  */
+.why-choose-us{
+background-color: rgb(243, 243, 243);  border-radius:80px;
+}
+.why-choose-us>div>h1{
+font-family: Georgia, 'Times New Roman', Times, serif; font-weight:500;color: rgb(253, 26, 101);
+}
+
+.why-choose-us>div>img{
+height: 100%;width: 100%;
 }
