--- a/smart_classroom/src/components/admin/StudentReg.css
+++ b/smart_classroom/src/components/admin/StudentReg.css
@@ -1,14 +1,16 @@
 
 .Stdregister-from-main{
-    height: 100vh; width: 100vw;  display: flex; justify-content: center ; justify-items: center; color: white;
+    /* overflow-x: hidden; */
+     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold; 
 }
 .Stdregister-form{
     align-self: center;
-    height: 30vmax;
-    width: 40vmax;
-    background-color: rgb(12, 11, 11);
+    /* height: 30vmax; */
+    /* width: 40vmax; */
+    height: 100vh; width:80vw;
+    background-color: rgb(1, 103, 112);
     display: flex; align-items: center; justify-content: center; flex-direction: column;
     
 }
@@ -18,11 +20,15 @@
     width: 50vmax;
     }
 }
+
+.Stdregister-form>form{
+    height: 50vh;display: flex;flex-direction: column; gap: 15px;
+}
 .Stdregister-form>form>div>label{
     width: 100px; 
     
 }
 .Stdregister-form>form>div>input,.Stdregister-form>form>div>select{
-    width: 200px;
-    padding: 4px;
+    width: 40vw;
+    padding: 10px;
 }
